# bagzel

./: .bazelrc  .bazelversion.license  .gitattributes  .gitignore  .gitlab-ci.bagzel.yml  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  launch-bagzel.sh
.github/workflows/: draft-pdf.yml  rosbags_build_check.yml
LICENSES/: LicenseRef-TUG-free-use-modify-distribute.txt
config/: BUILD.bazel  MODULE.bazel  config.bzl
data/: BUILD.bazel  valid_rosbags.bzl
data_example/2025-04-23_13-56-29_tas/minimal_ros2bag/: metadata.yaml  minimal_ros2bag.db3
data_example/2025-04-23_13-56-29_tas/minimal_rosbag/: minimal_rosbag.bag
docs/: bazel-profiling.md  cluster-deployment.md  config-bagzel.md  declare-rosbag-artifacts.md  graph-macro.md  licensing-reuse.md  play-rosbag.md  update-python-deps.md
docs/bazel/: redirecting-bazel-output.md  update-python-deps.md
processing_edges/mwe_print_filenames/: BUILD.bazel  mwe_print_filenames.bzl  mwe_print_filenames.py
processing_edges/rosbag_to_nuscenes/: .gitignore  BUILD.bazel  README.md  requirements.txt  requirements_lock.linux.x86_64.txt  rosbag_to_nuscenes.MODULE.bazel  rosbag_to_nuscenes.py  rosbag_to_nuscenes_macro.bzl
processing_edges/rosbag_to_nuscenes/param/: README.md  param.yaml
processing_edges/rosbag_to_nuscenes/src/datahandler/: __init__.py  camerainfohandler.py  imagehandler.py  lidarhandler.py  odometryhandler.py  tfhandler.py
processing_edges/rosbag_to_nuscenes/src/filehandler/: fast_check.py  helper.py  nuscenes_files.py
processing_edges/rosbag_to_nuscenes/src/msgs/: __init__.py  helper.py  msg_definition.py
processing_edges/rosbag_to_nuscenes/tools/: merge_scenes.py  visualize.py
processing_edges/rosbag_to_vision_dataset/src/: BUILD.bazel
processing_edges/rosbag_to_vision_dataset/src/cpp/: BUILD.bazel
processing_edges/rosbag_to_vision_dataset/src/cpp/ros/: BUILD.bazel
processing_edges/rosbag_to_vision_dataset/src/cpp/ros/extractors/: BUILD.bazel  rosbag_to_images.cpp  rosbag_to_metadata.cpp  rosbag_to_oxts.cpp  rosbag_to_tf_trajectory.cpp  rosbag_to_transforms.cpp
processing_edges/rosbag_to_vision_dataset/src/cpp/ros/tools/: BUILD.bazel  project_trajectory_to_image.cpp  rosbag_filter.cpp  rosbag_filter_parallel.cpp  rosbag_info.cpp  rosbag_topic_filter.cpp
processing_edges/rosbag_to_vision_dataset/src/cpp/tools/: BUILD.bazel  images_to_sequence.cpp  merge_annotations.cpp
processing_edges/rosbag_to_vision_dataset/src/python/: BUILD
processing_edges/rosbag_to_vision_dataset/src/python/tools/: BUILD.bazel  gps_to_map.py  multi_gps_to_map.py
processing_edges/rosbag_to_vision_dataset/src/starlark/rules/core/: merge_worldmodel_annotations.bzl
processing_edges/rosbag_to_vision_dataset/src/starlark/rules/python/: oxts_to_maps.bzl  visualize_trajectory.bzl
processing_edges/rosbag_to_vision_dataset/src/starlark/rules/ros/extractors/: rosbag_to_images.bzl  rosbag_to_metadata.bzl  rosbag_to_oxts.bzl  rosbag_to_tf_trajectory.bzl  rosbag_to_transforms.bzl
processing_edges/rosbag_to_vision_dataset/src/starlark/rules/ros/tools/: project_trajectory_to_image.bzl
processing_edges/rosbag_to_vision_dataset/src/tex/: BUILD.bazel
processing_edges/rosbag_to_vision_dataset/src/tex/joss/: BUILD.bazel  paper.bib  paper.md
processing_edges/rosbag_to_vision_dataset/src/tex/joss/figs/: hashing_b.svg.license
processing_edges/rosbag_to_vision_dataset/src/tex/joss/tex_deps/: authblk.sty  hyph-en-us.tex  loadhyph-en-us.tex
processing_edges/rosbag_to_vision_dataset/src/tex/joss/tools/: inara_docker.sh
src/: BUILD.bazel
src/cpp/: BUILD.bazel
src/cpp/ros/extractors/: BUILD.bazel  rosbag_to_transforms.cpp
src/cpp/ros/tools/: BUILD.bazel  rosbag_filter.cpp  rosbag_filter_parallel.cpp  transform_trajectory.cpp
src/cpp/tools/: BUILD.bazel  merge_annotations.cpp
src/python/: BUILD
src/python/tools/: BUILD.bazel  vis_seq_traj.py
src/starlark/macros/: declare_rosbag_artifacts.bzl
src/starlark/rules/core/: images_to_sequences.bzl  merge_annotations.bzl
src/starlark/rules/ros/extractors/: rosbag_to_transforms.bzl
src/starlark/rules/ros/tools/: filter_rosbags.bzl  transform_trajectory.bzl
starlark/core/: BUILD.bazel  shellrule.bzl  slurmrule.bzl  starlark_to_json.bzl
starlark/core/external_repository/: BUILD.bazel  external_repository.bzl  external_repository_impl.bzl
starlark/macros/: graph.bzl  visual_targets.bzl
starlark/macros/graph_build/: BUILD.bazel  BUILD.graph.bazel  BUILD.graph.empty.bazel
