# SPDX-FileCopyrightText: 2025 Leon Pohl <leon.pohl@unibw.de>
#
# SPDX-License-Identifier: Apache-2.0

# ==============================================================================
# Module Configuration: bagzel
# Central Bazel module file for configuring dependencies and external repos.
# ==============================================================================

module(
    name = "bagzel",
    version = "0.1.0",
)

# ------------------------------------------------------------------------------
# Core Bazel Dependencies
# ------------------------------------------------------------------------------

bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "boost.endian", version = "1.83.0.bcr.2") # Boost components used by the C++ targets
bazel_dep(name = "opencv", version = "4.11.0.bcr.2") # OpenCV via BCR
bazel_dep(name = "nlohmann_json", version = "3.12.0") # Nlohmann JSON library via BCR
bazel_dep(name = "geographiclib", version = "2.4.0.bcr.2") # GeographicLib via BCR
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.1") # Eigen library via BCR

# ------------------------------------------------------------------------------
# ROS Rules (from GitHub, with archive override for specific commit)
# ------------------------------------------------------------------------------

bazel_dep(name = "rules_ros")

# archive_override(
#     module_name = "rules_ros",
#     urls = ["https://github.com/mvukov/rules_ros/archive/65f50cd6d10af98ae568f24fda6386c11fd0e063.zip"],
#     strip_prefix = "rules_ros-65f50cd6d10af98ae568f24fda6386c11fd0e063",
#     sha256 = "6753f9c637073f3d7186b4db5ecee06799f735675ff8339a8cd8e05f8426b384",
# )
archive_override(
    module_name = "rules_ros",
    urls = ["https://github.com/UniBwTAS/rules_ros/archive/f97b4f1a88e4cdfd27d25219eab652d3a240e384.zip"],
    strip_prefix = "rules_ros-f97b4f1a88e4cdfd27d25219eab652d3a240e384",
    sha256 = "9ff83404729982b99fb01c78fdd4be4cb0bd96a7cd9bc875b38f752ba6aa7a38",
)

# Declare and use non-module ROS repositories (mostly ROS 1 core packages)
non_module_ros_repositories = use_extension("@rules_ros//ros:extensions.bzl", "non_module_dependencies")

use_repo(
    non_module_ros_repositories,
    "console_bridge",
    "orocos_kdl",
    "ros_actionlib",
    "ros_comm",
    "ros_comm_msgs",
    "ros_common_msgs",
    "ros_dynamic_reconfigure",
    "ros_gencpp",
    "ros_genmsg",
    "ros_genpy",
    "ros_geometry2",
    "ros_ros",
    "ros_std_msgs",
    "rosconsole",
    "roscpp_core",
    "tinyxml",
    "urdfdom",
    "urdfdom_headers",
)

# ------------------------------------------------------------------------------
# Rules for Fetching Repositories via http_archive and pip
# ------------------------------------------------------------------------------

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# ------------------------------------------------------------------------------
# Python Package Management via pip
# ------------------------------------------------------------------------------

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pypi",
    python_version = "3.10",  # Must match the toolchain version
    requirements_lock = "//third_party/python:requirements_lock.txt",
    requirements_windows = "//third_party/python:requirements_lock.txt",
)

use_repo(pip, "pypi")

# ------------------------------------------------------------------------------
# Additional Third-Party Dependencies (Not via BCR)
# ------------------------------------------------------------------------------

# ROS-compatible OpenCV bridge
http_archive(
    name = "vision_opencv",
    build_file = "third_party/vision_opencv-1.16.2/BUILD.bazel",
    strip_prefix = "vision_opencv-1.16.2",
    urls = ["https://github.com/ros-perception/vision_opencv/archive/refs/tags/1.16.2.tar.gz"],
    sha256 = "046f3bac5dcdaea5678bf5e6be10d895bbd670cc16c7b97ba4c1a6b661f8557e",
)

# NCOM binary decoder from Oxford Technical Solutions
http_archive(
    name = "NCOMdecoder",
    build_file = "third_party/NCOMdecoder/BUILD.bazel",
    strip_prefix = "NCOMdecoder-6bd95e9a5f826556e1c4c0bc586fec3f973c76e3",
    urls = ["https://github.com/OxfordTechnicalSolutions/NCOMdecoder/archive/6bd95e9a5f826556e1c4c0bc586fec3f973c76e3.zip"],
    sha256 = "d22e1d29e43be9cb8e93a072c24c7c2cda549eedf6b9225a2195ff03f397f900",
)

# Custom Ethernet message definitions (ROS message package)
http_archive(
    name = "ethernet_msgs",
    build_file = "third_party/ethernet_msgs/BUILD.bazel",
    strip_prefix = "ethernet_msgs-b434f952e4550b69ec334dac8d259d4a5ea4a84a",
    urls = ["https://github.com/UniBwTAS/ethernet_msgs/archive/b434f952e4550b69ec334dac8d259d4a5ea4a84a.zip"],
    sha256 = "dff505d1389fef8ec217eada3c7d8979641481b4608d87c7fd2c080c5d2baaf7",
)
