# SPDX-FileCopyrightText: 2025 Leon Pohl <leon.pohl@unibw.de>
#
# SPDX-License-Identifier: Apache-2.0

# === Load custom Starlark rules/macros ===
load("//src:starlark/macros/declare_rosbag_artifacts.bzl", "declare_rosbag_artifacts")  # Converts rosbags to image sequences

# === Configuration Parameters ===
TOPICS = [
    "/sensor/camera/surround/front/image_raw",
    # Additional camera topics can be enabled if needed
]


# === Workstation Testing ===
# Local small-scale test to declare rosbags from a directory into build targets
declare_rosbag_artifacts(
    name = "rosbags_sub1",
    topics = TOPICS,
    rosbag_dir = "rosbags",
)


# === Rosbag Preprocessing ===
# Legacy system: Simple glob to gather all rosbags
# Note: For more scalable systems, use a metadata-driven approach
# filegroup(
#     name = "rosbag_dir",
#     srcs = glob(["rosbags/**/*.bag"]),
# )

# Example of a smarter rosbag filter (currently disabled)
# filter_rosbag(
#     name = "generate_valid_rosbags",
#     rosbag_dir = "//data:rosbag_dir",
#     topics = ["/sensor/camera/surround/front/image_raw"],
#     filter_tool = "//src:rosbag_filter_parallel",
# )