# SPDX-FileCopyrightText: 2025 Leon Pohl <leon.pohl@unibw.de>
#
# SPDX-License-Identifier: Apache-2.0

# ------------------------------------------------------------------------------
# Group target to build all Python binaries in this package
# ------------------------------------------------------------------------------
filegroup(
    name = "everything",
    srcs = [
        "//src/cpp:everything",
        "//src/python:everything",
    ],
    visibility = ["//visibility:public"],
)
