# SPDX-FileCopyrightText: 2025 Leon Pohl <leon.pohl@unibw.de>
#
# SPDX-License-Identifier: Apache-2.0

filegroup(
    name = "everything",
    srcs = [
        "//src/cpp/ros/extractors:everything",
        "//src/cpp/ros/tools:everything",
        "//src/cpp/tools:everything",
    ],
    visibility = ["//visibility:public"],
)