# SPDX-FileCopyrightText: 2025 Leon Pohl <leon.pohl@unibw.de>
#
# SPDX-License-Identifier: Apache-2.0

filegroup(
    name = "everything",
    srcs = [
        "@bagzel//processing_edges/rosbag_to_vision_dataset/src/cpp/ros/extractors:everything",
        "@bagzel//processing_edges/rosbag_to_vision_dataset/src/cpp/ros/tools:everything",
        "@bagzel//processing_edges/rosbag_to_vision_dataset/src/cpp/tools:everything",
    ],
    visibility = ["//visibility:public"],
)